--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/compatible": "^1.0.2",
     "@ant-design/icons": "^4.1.0",
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "antd": "^4.2.3",
+    "antd": "^4.2.4",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^1.0.0-alpha.0",
+    "echarts": "^4.7.0",
     "less": "^3.11.1",
     "less-loader": "^6.1.0",
     "moment": "^2.25.3",
@@ -19,8 +21,12 @@
     "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
     "react-loadable": "^5.5.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "xlsx": "^0.16.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
