--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@ant-design/compatible": "^1.0.2",
     "@ant-design/icons": "^4.1.0",
     "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@craco/craco": "^5.6.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.2.4",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
+    "craco-less": "^1.16.0",
     "customize-cra": "^1.0.0-alpha.0",
     "echarts": "^4.7.0",
     "less": "^3.11.1",
@@ -26,12 +28,13 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "wangeditor": "^3.1.1",
     "xlsx": "^0.16.1"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
