--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "wangeditor": "^3.1.1",
     "xlsx": "^0.16.1"
